--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
 
                     <ul class="dropdown-menu">
 
-                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Telefone</a></li>
 
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><a class="dropdown-item" href="#">Sobre Nós</a></li>
 
                       <li><hr class="dropdown-divider"></li>
 
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li><a class="dropdown-item" href="#">Trabalhe Conosco</a></li>
 
                     </ul>
 
